# Slide_app

./: .env  .gitignore  API_Specification.txt  Dockerfile  README.md  Slide Generation API - Swagger UI.json  api.py  app.py  dockerignore  main.py  model_config.py  openapi.json  pyproject.toml  slide_agent.py  test.py  אירוע ביטחוני - דוגמה.txt  טמפלט__פיצטקה.json  טמפלט_דיון_סטטוס.json  טמפלט_תחקיר.json
.ipynb_checkpoints/: main-checkpoint.ipynb
config/: __init__.py  config.json  config.py
prompts/: __init__.py  prompts.py
schemas/: layouts.py
schemas/config/: app_config.py  llm_api_config.py  llm_parameters_config.py  postgres_config.py
services/: __init__.py  edit_agent.py  slide_agent.py  structure_agent.py
tests/: api.py  api_models.py  app.ipynb  app_gradio.py  config.py  edit_agent.py  main.py  prompts.py  renderers.py  revision_manager.py  services.py  slide_agent.py  state.py  structure_agent.py
ui/: __init__.py  renderers.py
utils/: __init__.py  llm.py  revision_manager.py  slide_builder.py  state.py
