[project]
name = "slide-generation-tool"
version = "0.1.0"
description = "presentation generation tool"
requires-python = "==3.10.*"

dependencies = [
    "fastapi==0.128.0",
    "gradio>=4.0.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "utils", "ui", "schemas", "prompts", "config"]